# CIFS-Haskell

./: .gitignore  CIFS.cabal  Internals.md  LICENSE  TODO.txt
app/: Main.hs
src/: Folder.hs  Index.hs  InvertedTable.hs  Lib.hs
src/Demos/: Demo2.hs  Demo3.hs
src/IO/: Hashing.hs
src/System/Directory/: Extras.hs
src/Types/: Folder.hs  Hash.hs  Index.hs  InvertedTable.hs
src/Util/: Show.hs
src/Win32/: ContextMenu.hs
