version:             0.1.0.0
name:                CIFS
synopsis:            Crypto Indexed File System
description:         Please see README.md
homepage:            http://github.com/NightRa/CIFS#readme
license:             BSD3
license-file:        LICENSE
author:              Ilan Godik, Yuval Alfassi
maintainer:          ilan3580@gmail.com
copyright:           2010 Author Here
category:            Filesystem
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types.Hash,
                       Types.Folder,
                       Types.InvertedTable,
                       Types.Index,
                       IO.Hashing,
                       System.Directory.Extras,
                       Util.Show,
                       Demos.Demo2,
                       Demos.Demo3
                       Win32.ContextMenu
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       cryptohash,
                       bytestring,
                       base16-bytestring,
                       aeson,
                       aeson-pretty,
                       attoparsec,
                       text,
                       directory,
                       filepath,
                       Win32,
                       bytestring-trie
  default-language:    Haskell2010

executable CIFS
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       CIFS,
                       bytestring
  default-language:    Haskell2010

-- test-suite CIFS-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base,
--                        CIFS
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NightRa/CIFS
